--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import { Image } from "astro:assets";
 
-import { SITE_NAVIGATION } from "../const";
+import SideBar from "../components/SideBar.astro";
 import Layout from "../layouts/BaseLayout.astro";
+
+import { SITE_NAVIGATION } from "../const";
 
 const Images = {
   web: "/software-dev-pic.jpg",
@@ -17,20 +19,14 @@ let currentImage = Images.web;
   title="Home"
   description="Matthew Ubalde portfolio. Ranging from Web and Game Development, and Creative Arts!"
 >
-  <aside
-    class:list={[
-      "flex flex-col justify-center items-start gap-4",
-      "h-full w-1/4 px-8",
-      " bg-black text-white",
-    ]}
-  >
+  <SideBar>
     <h1>Matthew Ubalde</h1>
     <h2>Computer Programming and Analysis student at Fanshawe College</h2>
     <h2>
       Great range in logic and artistic skills. Interested in web and game
       development.
     </h2>
-  </aside>
+  </SideBar>
   <div class="group relative w-full h-full z-10 overflow-hidden">
     <Image
       src={currentImage}
