Added interface for the Props in Navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,10 @@
 ---
 import { SITE_NAVIGATION } from "../const";
 
+interface Props {
+  current: string;
+}
+
 const { current } = Astro.props;
 ---
 
