--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -2,16 +2,19 @@
 import { Image } from "astro:assets";
 import type { ExperienceShowcase } from "../const";
 
+// type Props = ExperienceShowcase;
 interface Props {
   src: ExperienceShowcase;
 }
 
+// const { title, experience, alt, src } = Astro.props;
 const { src } = Astro.props;
 ---
 
 <div
-  class="flex flex-col justify-center items-center bg-gray-400 p-8 rounded-lg"
+  class="flex flex-col justify-center items-center bg-gray-400 p-4 rounded-lg"
 >
   <Image src={src.src} alt={src.alt} width={150} height={150} />
-  <h2>{src.title} - {src.experience}</h2>
+  <h2>{src.title}</h2>
+  <h3 class="text-xl">{src.experience}</h3>
 </div>
