--- a/src/pages/web/index.astro
+++ b/src/pages/web/index.astro
@@ -5,7 +5,17 @@ import SideBar from "../../components/SideBar.astro";
 
 import Section from "../../components/Section.astro";
 
-import socialMedia from "../../data/socialMedia";
+import socialMedia from "../../data/socialMedia.ts";
+import {
+  frontendExperience,
+  backendExperience,
+} from "../../data/webExperience.ts";
+
+// const images = await Astro.glob("src/assets/*").then((files) =>
+//   files.map((file) => file.default)
+// );
+
+import ExperienceBadge from "../../components/ExperienceBadge.astro";
 ---
 
 <Layout
@@ -42,12 +52,15 @@ import socialMedia from "../../data/socialMedia";
       </Section>
       <Section>
         <h1 class="text-center">Front-end</h1>
-        <div class="flex flex-wrap gap-x-8 gap-y-2">
-          <ImageLink link={socialMedia.linkedin} />
+        <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
+          {frontendExperience.map((f) => <ExperienceBadge src={f} />)}
         </div>
       </Section>
       <Section>
         <h1 class="text-center">Back-end</h1>
+        <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
+          {frontendExperience.map((b) => <ExperienceBadge src={b} />)}
+        </div>
       </Section>
     </div>
   </main>
