--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -12,7 +12,8 @@ const { src } = Astro.props;
 ---
 
 <div
-  class="flex flex-col justify-center items-center bg-gray-400 p-4 rounded-lg"
+  class="flex flex-col justify-center items-center bg-gray-800 p-4 rounded-lg
+          hover:scale-105 transition-transform"
 >
   <Image src={src.src} alt={src.alt} width={150} height={150} />
   <h2>{src.title}</h2>
