--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,6 +31,7 @@ const { title, description } = Astro.props;
       >
         <slot name="sidebar" />
       </aside>
+      <slot />
     </main>
     <footer
       class="flex justify-center items-center gap-8 h-auto p-8 bg-black text-white"
