Update the web index
To make use of the new BaseLayout, and adjust the placement of the sections.

--- a/src/pages/web/index.astro
+++ b/src/pages/web/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "../../layouts/BaseLayout.astro";
-import ImageLink from "../../components/ImageLink.astro";
-
 import Section from "../../components/Section.astro";
+import ExperienceBadge from "../../components/ExperienceBadge.astro";
 
-import socialMedia from "../../data/socialMedia.ts";
 import {
   frontendExperience,
   backendExperience,
@@ -13,41 +11,25 @@ import {
 // const images = await Astro.glob("src/assets/*").then((files) =>
 //   files.map((file) => file.default)
 // );
-
-import ExperienceBadge from "../../components/ExperienceBadge.astro";
 ---
 
 <Layout
   title="Web"
   description="Matthew Ubalde web development portfolio. Have some experienced in React, React Native, and Vue. Used Gatsby, and now Astro, to develop websites."
+  enableNav
 >
   <Fragment slot="sidebar">
     <h1>Web Development</h1>
-    <p class="text-4xl font-light">
+    <p class="font-light">
       Can create SPA with React and Vue. Used Astro to create this portfolio
       website as a MPA for faster loading speeds.
     </p>
-    <p class="text-4xl font-light">
+    <p class="font-light">
       With experience in web development, I have used React Native in
       conjunction with Expo to create a mobile application.
     </p>
   </Fragment>
   <div class="relative h-full w-full z-10 overflow-hidden overflow-y-auto">
-    <Section
-      class="flex flex-col justify-center items-center gap-8 text-center"
-    >
-      <h1 class="text-center">This site is made in <b>Astro</b></h1>
-      <p>
-        My original portfolio site was made in <b>Vite</b> and <b>React</b>.
-        After learning web development overtime, I realized I don't need React
-        as a lot of JavaScript on this site is rather excessive.
-      </p>
-      <p>So before choosing Gatsby with React, I found myself using Astro!</p>
-      <p>
-        And so, I started development on this site along side Tailwind to hasten
-        the development.
-      </p>
-    </Section>
     <Section>
       <h1 class="text-center mb-8">Front-end</h1>
       <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
@@ -57,8 +39,40 @@ import ExperienceBadge from "../../components/ExperienceBadge.astro";
     <Section>
       <h1 class="text-center mb-8">Back-end</h1>
       <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
-        {frontendExperience.map((b) => <ExperienceBadge src={b} />)}
+        {backendExperience.map((b) => <ExperienceBadge src={b} />)}
       </div>
+    </Section>
+    <Section class="flex flex-col justify-center gap-8 text-center">
+      <h1 class="text-center">This site is made in <b>Astro</b></h1>
+      <p>
+        My original portfolio site was made in <b>Vite</b> and <b>React</b>. In
+        the spirit of learning, I learned and discovered other frameworks to
+        develop websites.
+      </p>
+      <p>
+        So before choosing Gatsby with React, I found myself using Astro with
+        Tailwind to style the site! And with React for specific functionalities.
+      </p>
+      <p>Like the contact form!</p>
+    </Section>
+    <Section>
+      <!-- Insert contact form -->
+    </Section>
+    <Section class="flex flex-col justify-center gap-8 text-center">
+      <h1 class="text-center">College Experience</h1>
+      <p>
+        In Fanshawe, I have to develop a mobile application using React Native
+        and Expo for testing.
+      </p>
+      <p>
+        And the application is called "Until Finish". A task management software
+        that's focus-oriented and intuitive application.
+      </p>
+      <p>
+        A lot of the web development skills were used to learn and adapt this
+        application to reality. I'm able to autheticate in login, and about to
+        implement the cloud feature to store the tasks between phones!
+      </p>
     </Section>
   </div>
 </Layout>
