Made enableNav nullable

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ interface Props {
   title: string;
   description: string;
   enableNav: boolean;
+  enableNav?: boolean;
 }
 
 const { title, description, enableNav } = Astro.props;
