--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,7 +69,11 @@ const { title, description, enableNav } = Astro.props;
           <slot name="sidebar" />
         </div>
       </aside>
-      <slot />
+      <div
+        class="group relative h-full w-full z-10 overflow-hidden overflow-y-auto"
+      >
+        <slot />
+      </div>
     </main>
     <footer
       class="flex justify-center items-center gap-8 h-auto p-8 bg-black text-white"
