--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -34,7 +34,7 @@ const { title, description, enableNav } = Astro.props;
     <main class="flex h-screen w-screen">
       <aside
         class:list={[
-          "flex flex-col justify-between items-stretch",
+          "flex flex-col justify-start items-stretch",
           "h-full w-2/6 min-w-80",
           " bg-black text-white overflow-hidden",
         ]}
@@ -63,11 +63,11 @@ const { title, description, enableNav } = Astro.props;
             </Section>
           )
         }
-        <div
+        <Section
           class="flex flex-col justify-center items-start gap-4 h-full w-full px-8"
         >
           <slot name="sidebar" />
-        </div>
+        </Section>
       </aside>
       <div
         class="group relative h-full w-full z-10 overflow-hidden overflow-y-auto"
