--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,13 @@ h4 {
 p {
   @apply text-3xl font-normal;
 }
+
+.ul,
+ul {
+  @apply bg-gray-800 rounded-lg py-8 px-16 mx-44 text-start list-disc;
+}
+
+.li,
+li {
+  @apply my-2 text-2xl font-light;
+}
