Remove the group class
It was interfering with the other group-related classes.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,9 +69,7 @@ const { title, description, enableNav } = Astro.props;
           <slot name="sidebar" />
         </Section>
       </aside>
-      <div
-        class="group relative h-full w-full z-10 overflow-hidden overflow-y-auto"
-      >
+      <div class="relative h-full w-full z-10 overflow-hidden overflow-y-auto">
         <slot />
       </div>
     </main>
