--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ let currentImage = Images.web;
     width={1600}
     height={600}
     alt=""
-    class="absolute w-full h-full"
+    class="absolute w-full h-full -z-10"
     loading="eager"
     quality="mid"
   />
