Remove unused enableNav
Due to the new navigation changes

--- a/src/pages/game/king-of-the-cheese.astro
+++ b/src/pages/game/king-of-the-cheese.astro
@@ -3,12 +3,7 @@ import Layout from "../../layouts/BaseLayout.astro";
 import Section from "../../components/Section.astro";
 ---
 
-<Layout
-  title="King of the Cheese"
-  description="Game made"
-  enableNav
-  prevNav="/game"
->
+<Layout title="King of the Cheese" description="Game made" prevNav="/game">
   <Fragment slot="sidebar">
     <h1>King of the Cheese</h1>
     <p>
