--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,27 +20,31 @@ let currentImage = Images.web;
 >
   <Fragment slot="sidebar">
     <h1>Matthew Ubalde</h1>
-    <h2>Computer Programming and Analysis student at Fanshawe College</h2>
-    <h2>
+    <p class="font-light">
+      Computer Programming and Analysis student at Fanshawe College
+    </p>
+    <p class="font-light">
       Great range in logic and artistic skills. Interested in web and game
       development.
-    </h2>
+    </p>
   </Fragment>
-  <Image
-    src={currentImage}
-    width={1600}
-    height={600}
-    alt=""
-    class="absolute w-full h-full -z-10"
-    loading="eager"
-    quality="mid"
-  />
-  <Image
-    src="/portfolio-portrait.png"
-    width={400}
-    height={600}
-    loading="eager"
-    alt="A smiling Asian man wearing a blue, orange-stripped, t-shirt and glasses."
-    class="absolute bottom-0 right-8 w-1/2 object-cover z-10"
-  />
+  <div class="relative w-full h-5/6 overflow-hidden">
+    <Image
+      src={currentImage}
+      width={1600}
+      height={600}
+      alt=""
+      class="absolute w-full h-full"
+      loading="eager"
+      quality="mid"
+    />
+    <Image
+      src="/portfolio-portrait.png"
+      width={400}
+      height={600}
+      loading="eager"
+      alt="A smiling Asian man wearing a blue, orange-stripped, t-shirt and glasses."
+      class="absolute bottom-0 right-8 w-1/2 object-cover z-10"
+    />
+  </div>
 </Layout>
