--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ let currentImage = Images.web;
       development.
     </p>
   </Fragment>
-  <div class="relative w-full h-5/6 overflow-hidden">
+  <div class="relative w-full h-screen overflow-hidden">
     <Image
       src={currentImage}
       width={1600}
