Add hint to hover the side bar for nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,7 @@ let currentImage = Images.web;
       Great range in logic and artistic skills. Interested in web and game
       development.
     </p>
+    <p class="font-light">Hover here to look through my portfolio.</p>
   </Fragment>
   <div class="relative w-full h-screen overflow-hidden">
     <Image
