Added lazy loading on the social media icons

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -99,12 +99,14 @@ const { title, description, prevNav } = Astro.props;
               link={linkedin}
               width={50}
               height={50}
+              loading="lazy"
             />
             <ImageLink
               class="hover:scale-125 active:scale-95 transition-transform"
               link={github}
               width={50}
               height={50}
+              loading="lazy"
             />
           </div>
         </footer>
