--- a/src/pages/game/king-of-the-cheese.astro
+++ b/src/pages/game/king-of-the-cheese.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/BaseLayout.astro";
 import Section from "../../components/Section.astro";
+import ComparisonContainer from "../../components/comparisonContainer.astro";
 ---
 
 <Layout title="King of the Cheese" description="Game made" prevNav="/game">
@@ -58,31 +59,19 @@ import Section from "../../components/Section.astro";
       In general, I polish the animations, added running particles, and among
       other things.
     </p>
-    <div class="flex justify-center items-stretch gap-8">
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>Before</h2>
-        <p>INSERT CLIP</p>
-      </div>
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>After</h2>
-        <p>INSERT CLIP</p>
-      </div>
-    </div>
+    <ComparisonContainer>
+      <Fragment slot="before"> </Fragment>
+      <Fragment slot="after"> </Fragment>
+    </ComparisonContainer>
     <p>
       Whenever you press Z/X/Spacebar near cheese, you eat them instantly!
       Running through thousands of them would be more satisfying if there was
       more feedback with better sounds and visuals.
     </p>
-    <div class="flex justify-center items-stretch gap-8">
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>Before</h2>
-        <p>INSERT CLIP</p>
-      </div>
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>After</h2>
-        <p>INSERT CLIP</p>
-      </div>
-    </div>
+    <ComparisonContainer>
+      <Fragment slot="before"> </Fragment>
+      <Fragment slot="after"> </Fragment>
+    </ComparisonContainer>
     <p>
       And then, I thought about having hundreds and thousands of cheese and
       eating them would be really fun! But for that to happen, I needed to the
@@ -103,31 +92,19 @@ import Section from "../../components/Section.astro";
       cheese when it's only needed. Freeing up the audio thread which in turn
       more performance.
     </p>
-    <div class="flex justify-center items-stretch gap-8">
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>Before</h2>
-        <p>INSERT CLIP</p>
-      </div>
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>After</h2>
-        <p>INSERT CLIP</p>
-      </div>
-    </div>
+    <ComparisonContainer>
+      <Fragment slot="before"> </Fragment>
+      <Fragment slot="after"> </Fragment>
+    </ComparisonContainer>
     <p>
       Among other optimizations such as using the VisibleNotifier2D and reducing
       unneeded code, it's possible to have more cheeses all in the screen! More
       so 10 000 cheeses compare to the 1 000 that would cause some lag.
     </p>
-    <div class="flex justify-center items-stretch gap-8">
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>Before</h2>
-        <p>INSERT CLIP</p>
-      </div>
-      <div class="flex flex-col justify-center items-stretch gap-4 text-center">
-        <h2>After</h2>
-        <p>INSERT CLIP</p>
-      </div>
-    </div>
+    <ComparisonContainer>
+      <Fragment slot="before"> </Fragment>
+      <Fragment slot="after"> </Fragment>
+    </ComparisonContainer>
   </Section>
   <Section class="flex flex-col justify-center gap-8 text-center">
     <h1>Easter Eggs</h1>
