Make use of the defaultFlex Section prop

--- a/src/pages/game/index.astro
+++ b/src/pages/game/index.astro
@@ -25,7 +25,7 @@ import { gameProjects, gameExperience } from "../../data/game";
       {gameExperience.map((g) => <ExperienceBadge src={g} />)}
     </ExpBadgeContainer>
   </Section>
-  <Section class="flex flex-col justify-center gap-8 text-center">
+  <Section defaultFlex>
     <h1>Game Projects</h1>
     <p>
       I make games as hobby as I found the game development process fun and
