--- a/src/pages/software/index.astro
+++ b/src/pages/software/index.astro
@@ -26,7 +26,7 @@ import softwareExperience from "../../data/softwareExperience";
       {softwareExperience.map((s) => <ExperienceBadge src={s} />)}
     </div>
   </Section>
-  <Section class="flex flex-col justify-center gap-8 text-center">
+  <Section defaultFlex>
     <h1>Experiences in Fanshawe</h1>
     <p>Throughout my CPA3 program, I've learned many things.</p>
     <ul>
