--- a/src/pages/web/index.astro
+++ b/src/pages/web/index.astro
@@ -40,7 +40,7 @@ import {
       {backendExperience.map((b) => <ExperienceBadge src={b} />)}
     </div>
   </Section>
-  <Section class="flex flex-col justify-center gap-8 text-center">
+  <Section defaultFlex>
     <h1 class="text-center">This site is made in <b>Astro</b></h1>
     <p>
       My original portfolio site was made in <b>Vite</b> and <b>React</b>. In
@@ -56,8 +56,8 @@ import {
   <Section>
     <!-- Insert contact form -->
   </Section>
-  <Section class="flex flex-col justify-center gap-8 text-center">
-    <h1 class="text-center">College Experience</h1>
+  <Section defaultFlex>
+    <h1>College Experience</h1>
     <p>
       In Fanshawe, I have to develop a mobile application using React Native and
       Expo for testing.
