--- a/src/pages/web/index.astro
+++ b/src/pages/web/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../../layouts/BaseLayout.astro";
 import Section from "../../components/Section.astro";
-import ExperienceBadge from "../../components/ExperienceBadge.astro";
+import BadgeContainer from "../../components/BadgeContainer.astro";
 
 import {
   frontendExperience,
@@ -30,15 +30,11 @@ import {
   </Fragment>
   <Section>
     <h1 class="text-center mb-8">Front-end</h1>
-    <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
-      {frontendExperience.map((f) => <ExperienceBadge src={f} />)}
-    </div>
+    <BadgeContainer src={frontendExperience} />
   </Section>
   <Section>
     <h1 class="text-center mb-8">Back-end</h1>
-    <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-4">
-      {backendExperience.map((b) => <ExperienceBadge src={b} />)}
-    </div>
+    <BadgeContainer src={backendExperience} />
   </Section>
   <Section defaultFlex>
     <h1 class="text-center">This site is made in <b>Astro</b></h1>
