--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,15 +6,21 @@ interface Props {
 }
 
 const { current } = Astro.props;
+const filteredNav = SITE_NAVIGATION.filter((nav) => nav.href !== current);
 ---
 
 <!--Computer version-->
-<nav class:list={["hidden md:block", "flex flex-col gap-8"]}>
-  {
-    SITE_NAVIGATION.map((value) => (
-      <a href={value.href} class:list={["text-2xl", "bg-amber-300"]}>
-        {value.label}
-      </a>
-    ))
-  }
-</nav>
+<div class:list={["flex flex-col gap-2", "bg-cyan-900 p-2"]}>
+  <div class:list={["bg-cyan-950 p-2 rounded-sm"]}>
+    {current}
+  </div>
+  <div class:list={["flex flex-col md:flex-row gap-x-4 gap-y-2 "]}>
+    {
+      filteredNav.map((value) => (
+        <a href={value.href} class:list={["text-2xl"]}>
+          {value.label}
+        </a>
+      ))
+    }
+  </div>
+</div>
