--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,27 +9,27 @@ body {
 
 .h1,
 h1 {
-  @apply text-6xl font-normal;
+  @apply text-4xl font-normal;
 }
 
 .h2,
 h2 {
-  @apply text-4xl font-light;
+  @apply text-3xl font-light;
 }
 
 .h3,
 h3 {
-  @apply text-4xl font-light;
+  @apply text-2xl font-light;
 }
 
 .h4,
 h4 {
-  @apply text-3xl font-light;
+  @apply text-xl font-light;
 }
 
 .p,
 p {
-  @apply text-3xl font-normal;
+  @apply text-base font-normal;
 }
 
 .li,
